updates to kidspring/fuse sections of /about to fix gradients

--- a/about.html
+++ b/about.html
@@ -83,11 +83,11 @@
 
     <div id="content">
 
-      <section class="position-relative text-white d-flex justify-content-center align-content-center text-center pb-9" style="background: rgb(20,20,20);">
+      <section class="position-relative text-white d-flex justify-content-center align-content-center text-center pb-9" style="background: rgb(0,100,60);">
         <div
-          class="fullscreen background-cover background-center o-70"
-          style="background-image: url('/Themes/new/Assets/Images/about_hero2_2x1.jpg')"></div>
-        <div class="fullscreen o-80" style="background: rgb(20,20,20);
+          class="fullscreen background-cover background-center o-40"
+          style="background-image: url('https://dg0ddngxdz549.cloudfront.net/newspring/about/2023/about_hero2_2x1.jpg')"></div>
+        <div class="fullscreen o-50" style="background: rgb(20,20,20);
   background: linear-gradient(0deg, rgba(20,20,20,0) 0%, rgba(20,20,20,1) 100%);"></div>
         <div class="bring-forward text-constrained" style="height: max-content !important">
           <h1 class="display-3">We want everyone everywhere to have an everyday relationship with Jesus.</h1>
@@ -191,7 +191,7 @@
         </div>
         <div class="text-constrained mx-auto text-center">
           <p>Looking to dive deeper into the theology of what we believe as a church?</p>
-          <p><a href="/our-beliefs" class="btn btn-primary">Learn More</a></p>
+          <p><a href="/beliefs" class="btn btn-primary">Learn More</a></p>
         </div>
 
 
@@ -372,15 +372,15 @@
 
       <section id="kids" class="position-relative pt-12 py-md-8 py-lg-9 py-xl-10 text-white" style="background-color: rgba(20,110,200, 1)">
         <div
-          class="position-absolute top-0 right-0 left-0 bottom-50 bottom-md-0 right-md-40 background-cover background-left"
+          class="position-absolute top-0 right-0 left-0 bottom-50 bottom-md-0 right-md-40 background-cover background-center"
           style="
-            background-image: url('/Themes/new/Assets/Images/about_kidspring3_2x1.jpg');
+            background-image: url('https://dg0ddngxdz549.cloudfront.net/newspring/about/2023/about_kidspring3_2x1.jpg');
           ">
           <div
-            class="hidden-sm hidden-md hidden-lg hidden-xl position-absolute top-0 right-0 bottom-0 left-0"
+            class=" hidden-md hidden-lg hidden-xl position-absolute top-0 right-0 bottom-0 left-0"
             style="background: linear-gradient(10deg, rgba(20,110,200, 1) 20%, rgba(20,110,200, 0) 100%)"></div>
           <div
-            class="hidden-xs position-absolute top-0 right-0 bottom-0 left-0"
+            class="hidden-xs hidden-sm position-absolute top-0 right-0 bottom-0 left-0"
             style="background: linear-gradient(-85deg, rgba(20,110,200, 1) 10%, rgba(20,110,200, 0) 100%)"></div>
         </div>
         <div class="bring-forward page-constrained mx-auto d-grid grid-cols-md-2 ltr">
@@ -391,7 +391,7 @@
             <p>Every Sunday, babies through fifth-grade children experience safe, age-appropriate environments where they can have fun learning about Jesus on their level. If you have an infant, we have a Mother’s Viewing Room where you can watch the service and care for your newborn in a dedicated space until you’re ready for them to join us in KidSpring. If your child has individual needs, SpringZone can help them engage with Jesus on the level most appropriate for them.</p>
             <p class="mb-0 d-flex flex-column flex-sm-row gap-y-1 gap-x-1 gap-y-sm-0" data-aos="fade-up">
               <a href="/kidspring" target="_blank" class="btn btn-primary drop-shadow">Learn more</a>
-              <script src="https://fast.wistia.com/embed/medias/95f95oa7pr.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><span class="wistia_embed wistia_async_95f95oa7pr popover=true popoverContent=link" style="display:inline;position:relative"><a href="#" class="btn btn-link text-white drop-shadow">What to Expect <i class="fa-solid fa-play ml-1"></i></a></span>
+              <script src="https://fast.wistia.com/embed/medias/95f95oa7pr.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><span class="wistia_embed wistia_async_95f95oa7pr popover=true popoverContent=link" style="position:relative"><a href="#" class="btn btn-link text-white drop-shadow">What to Expect <i class="fa-solid fa-play ml-1"></i></a></span>
 
             </p>
           </div>
@@ -402,13 +402,13 @@
         <div
           class="position-absolute top-0 right-0 left-0 bottom-50 bottom-md-0 left-md-40 background-cover background-center"
           style="
-            background-image: url('/Themes/new/Assets/Images/about_fuse_1x1.jpg');
+            background-image: url('https://dg0ddngxdz549.cloudfront.net/newspring/about/2023/about_fuse_1x1.jpg');
           ">
           <div
-            class="hidden-sm hidden-md hidden-lg hidden-xl position-absolute top-0 right-0 bottom-0 left-0"
+            class="hidden-md hidden-lg hidden-xl position-absolute top-0 right-0 bottom-0 left-0"
             style="background: linear-gradient(10deg, rgba(0,30,60, 1) 20%, rgba(0,30,60, 0) 100%)"></div>
           <div
-            class="hidden-xs position-absolute top-0 right-0 bottom-0 left-0"
+            class="hidden-xs hidden-sm position-absolute top-0 right-0 bottom-0 left-0"
             style="background: linear-gradient(80deg, rgba(0,30,60, 1) 20%, rgba(0,30,60, 0) 100%)"></div>
         </div>
         <div class="bring-forward page-constrained mx-auto d-grid grid-cols-md-2 ltr">
