--- a/beliefs.html
+++ b/beliefs.html
@@ -86,7 +86,7 @@
       <section class="position-relative text-white d-flex justify-content-center align-content-center text-center" style="background: rgb(40,120,180);">
         <div
           class="fullscreen background-cover background-center o-70"
-          style="background-image: url('https://images.unsplash.com/photo-1600262912274-28f333fa17bd?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2940&q=80')"></div>
+          style="background-image: url('https://dg0ddngxdz549.cloudfront.net/newspring/beliefs/2023/beliefs_hero_2x1.jpg')"></div>
         <div class="fullscreen o-90" style="background: rgb(40,120,180);
   background: linear-gradient(0deg, rgba(40,120,180,0) 0%, rgba(40,120,180,1) 100%);"></div>
         <div class="bring-forward text-constrained" style="height: max-content !important">
