updated testimonial transitions to come from sides

--- a/jobs.html
+++ b/jobs.html
@@ -114,11 +114,11 @@
         <div class="d-grid grid-cols-1 gap-y-6 gap-y-md-8">
 
           <div class="d-grid grid-cols-12 gap-y-4 gap-y-sm-6 gap-x-md-6 gap-x-xl-7">
-            <div class="ratio-square col-span-11 col-span-md-6 col-span-xl-4" data-aos="fade-up">
+            <div class="ratio-square col-span-11 col-span-md-6 col-span-xl-4" data-aos="fade-right">
               <div class="position-relative ratio-square rounded-2x rounded-l-0 background-cover background-center" style="background-image: url('/Themes/new/Assets/Images/jobs_testimonials_maliek_1x1.jpg'); box-shadow: 20px 20px 0px #59747D;">
               </div>
             </div>
-            <div class="col-span-12 col-span-md-6 col-span-xl-4 d-flex align-items-center" data-aos="fade-up">
+            <div class="col-span-12 col-span-md-6 col-span-xl-4 d-flex align-items-center" data-aos="fade-left">
               <div class="p-4 p-md-6 py-md-0">
                   <h3 class="h3">"I truly love the culture of understanding.</h3>
                   <p>Our job is pretty flexible, and I cannot possibly think of another place where my family truly comes first. Also, I love that I am not allowed to take myself too seriously, which makes for a fun working environment."</p>
@@ -128,11 +128,11 @@
           </div>
 
           <div class="d-grid grid-cols-12 gap-y-4 gap-y-sm-6 gap-x-md-6 gap-x-xl-7 rtl">
-            <div class="position-relative ratio-square col-span-11 col-span-md-6 col-span-xl-4" data-aos="fade-up">
+            <div class="position-relative ratio-square col-span-11 col-span-md-6 col-span-xl-4" data-aos="fade-left">
               <div class="ratio-square rounded-2x rounded-r-0 background-cover background-center" style="background-image: url('/Themes/new/Assets/Images/jobs_testimonials_kelsey_1x1.jpg'); box-shadow: -20px 20px 0px #67B3CD;">
               </div>
             </div>
-            <div class="col-span-12 col-span-md-6 col-span-xl-4 d-flex align-items-center ltr" data-aos="fade-up">
+            <div class="col-span-12 col-span-md-6 col-span-xl-4 d-flex align-items-center ltr" data-aos="fade-right">
               <div class="p-4 p-md-6 py-md-0">
                   <h3 class="h3">"I have loved working at NewSpring because it feels like a genuine family and team.</h3>
                   <p>Everyone is friendly, generous, and wants to see each other win. Because leaders have always cared about and invested in my growth both at work and at home, I am so much wiser and all-around healthier than I was before working here."</p>
@@ -142,11 +142,11 @@
           </div>
 
           <div class="d-grid grid-cols-12 gap-y-4 gap-y-sm-6 gap-x-md-6 gap-x-xl-7">
-            <div class="position-relative ratio-square col-span-11 col-span-md-6 col-span-xl-4" data-aos="fade-up">
+            <div class="position-relative ratio-square col-span-11 col-span-md-6 col-span-xl-4" data-aos="fade-right">
               <div class="ratio-square rounded-2x rounded-l-0 background-cover background-center" style="background-image: url('/Themes/new/Assets/Images/jobs_testimonials_tom_1x1.jpg'); box-shadow: 20px 20px 0px #263240;">
               </div>
             </div>
-            <div class="col-span-12 col-span-md-6 col-span-xl-4 d-flex align-items-center" data-aos="fade-up">
+            <div class="col-span-12 col-span-md-6 col-span-xl-4 d-flex align-items-center" data-aos="fade-left">
               <div class="p-4 p-md-6 py-md-0">
                   <h3 class="h3">"I've spent many years of my life working at NewSpring. They've been—without a doubt—the best years of my life!</h3>
                   <p>It's an incredible environment where the people you work for and serve alongside care about you, your family, and your walk with God. Each day my tires hit the parking lot, I'm excited to be here! I can't imagine a better place to invest my life building the kingdom of God!"</p>
@@ -156,11 +156,11 @@
           </div>
 
           <div class="d-grid grid-cols-12 gap-y-4 gap-y-sm-6 gap-x-md-6 gap-x-xl-7 rtl">
-            <div class="position-relative ratio-square col-span-11 col-span-md-6 col-span-xl-4" data-aos="fade-up">
+            <div class="position-relative ratio-square col-span-11 col-span-md-6 col-span-xl-4" data-aos="fade-left">
               <div class="ratio-square rounded-2x rounded-r-0 background-cover background-center" style="background-image: url('/Themes/new/Assets/Images/jobs_testimonials_jacob_1x1.jpg'); box-shadow: -20px 20px 0px #297F92;">
               </div>
             </div>
-            <div class="col-span-12 col-span-md-6 col-span-xl-4 d-flex align-items-center ltr" data-aos="fade-up">
+            <div class="col-span-12 col-span-md-6 col-span-xl-4 d-flex align-items-center ltr" data-aos="fade-right">
               <div class="p-4 p-md-6 py-md-0">
                   <h3 class="h3">"My wife and baby girls are just as loved and seen by NewSpring as I am as an employee.</h3>
                   <p>NewSpring believes that the health and well-being of my family is a huge part of me being successful in ministry and makes every accommodation necessary to keep my home Christ-centered and joyful. You're not going to find a more family-oriented and healthy work environment!"</p>
