--- a/jobs.html
+++ b/jobs.html
@@ -175,71 +175,71 @@
 
 
 
-      <section id="openings" class="bg-gray-darker text-white">
+      <section id="openings" class="bg-gray-lighter">
         <div class="text-constrained mx-auto text-center">
           <h2 class="display-3">Job Openings</h2>
           <p class="lead">NewSpring is one church with 14 campuses across South Carolina, so be sure to <span class="text-primary">note the location of each opening.</span></p>
         </div>
         
-        <div class="page-constrained mx-auto d-grid grid-cols-1 grid-cols-md-2 grid-cols-lg-3 my-5 my-md-6 gap-y-2 gap-x-sm-3 gap-y-md-3">
+        <div class="page-constrained mx-auto d-grid grid-cols-1 grid-cols-md-2 grid-cols-xl-3 my-5 my-md-6 gap-y-2 gap-x-sm-3 gap-y-md-3">
           <div>
-            <div class="bg-white text-gray-darker p-3 rounded" data-aos="fade-up">
+            <div class="bg-white text-gray-darker p-3 pb-2 rounded-lg" data-aos="fade-up">
               <h3 class="h6 tracking-tighter mb-0">KidSpring Director</h3>
               <p class="mb-1 font-sans font-bold text-uppercase text-gray"><small>Myrtle Beach, SC</small></p>
               <p class="mb-0"><a href="#" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
             </div>
           </div>
           <div>
-            <div class="bg-white text-gray-darker p-3 rounded" data-aos="fade-up">
+            <div class="bg-white text-gray-darker p-3 pb-2 rounded-lg" data-aos="fade-up">
               <h3 class="h6 tracking-tighter mb-0">Discipleship Coordinator</h3>
               <p class="mb-1 font-sans font-bold text-uppercase text-gray"><small>Anderson, SC</small></p>
               <p class="mb-0"><a href="#" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
             </div>
           </div>
           <div>
-            <div class="bg-white text-gray-darker p-3 rounded" data-aos="fade-up">
+            <div class="bg-white text-gray-darker p-3 pb-2 rounded-lg" data-aos="fade-up">
               <h3 class="h6 tracking-tighter mb-0">Guest Services Coordinator</h3>
               <p class="mb-1 font-sans font-bold text-uppercase text-gray"><small>Anderson, SC</small></p>
               <p class="mb-0"><a href="#" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
             </div>
           </div>
           <div>
-            <div class="bg-white text-gray-darker p-3 rounded" data-aos="fade-up">
+            <div class="bg-white text-gray-darker p-3 pb-2 rounded-lg" data-aos="fade-up">
               <h3 class="h6 tracking-tighter mb-0">KidSpring Coordinator <span class="no-wrap">(Part-Time)</span></h3>
               <p class="mb-1 font-sans font-bold text-uppercase text-gray"><small>Hilton Head, SC</small></p>
               <p class="mb-0"><a href="#" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
             </div>
           </div>
           <div>
-            <div class="bg-white text-gray-darker p-3 rounded" data-aos="fade-up">
+            <div class="bg-white text-gray-darker p-3 pb-2 rounded-lg" data-aos="fade-up">
               <h3 class="h6 tracking-tighter mb-0">Worship Leader</h3>
               <p class="mb-1 font-sans font-bold text-uppercase text-gray"><small>Columbia, SC</small></p>
               <p class="mb-0"><a href="#" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
             </div>
           </div>
           <div>
-            <div class="bg-white text-gray-darker p-3 rounded" data-aos="fade-up">
+            <div class="bg-white text-gray-darker p-3 pb-2 rounded-lg" data-aos="fade-up">
               <h3 class="h6 tracking-tighter mb-0">Fuse Director</h3>
               <p class="mb-1 font-sans font-bold text-uppercase text-gray"><small>Columbia, SC</small></p>
               <p class="mb-0"><a href="#" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
             </div>
           </div>
           <div>
-            <div class="bg-white text-gray-darker p-3 rounded" data-aos="fade-up">
+            <div class="bg-white text-gray-darker p-3 pb-2 rounded-lg" data-aos="fade-up">
               <h3 class="h6 tracking-tighter mb-0">Worship Leader</h3>
               <p class="mb-1 font-sans font-bold text-uppercase text-gray"><small>Northeast Columbia, SC</small></p>
               <p class="mb-0"><a href="#" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
             </div>
           </div>
           <div>
-            <div class="bg-white text-gray-darker p-3 rounded" data-aos="fade-up">
+            <div class="bg-white text-gray-darker p-3 pb-2 rounded-lg" data-aos="fade-up">
               <h3 class="h6 tracking-tighter mb-0">Worship Leader</h3>
               <p class="mb-1 font-sans font-bold text-uppercase text-gray"><small>Myrtle Beach, SC</small></p>
               <p class="mb-0"><a href="#" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
             </div>
           </div>
           <div>
-            <div class="bg-white text-gray-darker p-3 rounded" data-aos="fade-up">
+            <div class="bg-white text-gray-darker p-3 pb-2 rounded-lg" data-aos="fade-up">
               <h3 class="h6 tracking-tighter mb-0">Production Coordinator</h3>
               <p class="mb-1 font-sans font-bold text-uppercase text-gray"><small>Spartanburg, SC</small></p>
               <p class="mb-0"><a href="#" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
@@ -254,7 +254,7 @@
         </div>
       </section>
 
-      <section id="process" class="bg-gray-lighter px-sm-4">
+      <section id="process" class="bg-white px-sm-4">
         <div class="text-constrained mx-auto text-center mb-md-7">
           <p class="pretitle text-primary">Our Hiring Process</p>
           <h2 class="display-3">God made you and uniquely gifted you.</h2>
@@ -320,7 +320,7 @@
         </div>      
       </section>
 
-      <section id="benefits">
+      <section id="benefits" class="bg-gray-darker text-white">
         <div class="text-constrained mx-auto text-center">
           <p class="pretitle text-primary">Benefits</p>
           <h2 class="display-3">We truly care about our staff and their families!</h2>
@@ -339,12 +339,12 @@
             <p>We match up to 4% of your investment.</p>
           </div>
           <div data-aos="fade-up">
-            <i class="fa-thin fa-3x fa-fw fa-heart-pulse text-secondary mb-2"></i>
+            <i class="fa-thin fa-3x fa-fw fa-heart-pulse text-kraft mb-2"></i>
             <h3 class="h5">Long Term/Life Insurance</h3>
             <p>We cover 100%.</p>
           </div>
           <div data-aos="fade-up">
-            <i class="fa-thin fa-3x fa-fw fa-island-tropical text-secondary mb-2"></i>
+            <i class="fa-thin fa-3x fa-fw fa-island-tropical text-kraft mb-2"></i>
             <h3 class="h5">Paid Time Off</h3>
             <p>We want you to win at home, too!</p>
           </div>
@@ -399,7 +399,7 @@
             style="background: linear-gradient(10deg, rgba(20,120,140, 1) 20%, rgba(20,120,140, 0) 70%)"></div>
           <div
             class="hidden-xs hidden-sm position-absolute top-0 right-0 bottom-0 left-0"
-            style="background: linear-gradient(-70deg, rgba(20,120,140, 1) 35%, rgba(20,120,140, 0) 70%)"></div>
+            style="background: linear-gradient(-70deg, rgba(20,120,140, 1) 45%, rgba(20,120,140, 0) 80%)"></div>
         </div>
         <div class="bring-forward page-constrained mx-auto d-grid grid-cols-md-2 ltr">
           <div></div>
