shortened vision 2030 link on jobs'

--- a/jobs.html
+++ b/jobs.html
@@ -73,7 +73,6 @@
   background: linear-gradient(180deg, rgba(42,73,48,0) 20%, rgba(42,73,48,1) 95%);"></div>
         <div class="bring-forward text-constrained height-max-content">
           <h1 class="display-3">Join Our Team</h1>
-          <p class="hidden">Laborum labore cupidatat irure quis excepteur ipsum magna id. Magna enim laboris veniam ut quis eu id. Irure Lorem in ad enim Lorem.</p>
           <p class="mb-0"><a href="#openings" data-scroll class="btn btn-primary drop-shadow">View Job Openings</a></p>
         </div>
       </section>
@@ -85,7 +84,7 @@
         </div>
         <div class="text-constrained mx-auto text-center">      
           <p class="lead text-tertiary">If that’s something you desire, too, come join our team!</p>
-          <p>In 2020 we started down a <a href="/2030">10-year path we call Vision 2030</a>. Until 2030, our vision is focused on three things: getting our current campuses in permanent homes, eliminating all of our debt (completed as of 2023), and planting ten churches that are not NewSpring campuses.</p>
+          <p>In 2020 we started down a 10-year path we call <a href="/2030">Vision 2030</a>. Until 2030, our vision is focused on three things: getting our current campuses in permanent homes, eliminating all of our debt (completed as of 2023), and planting ten churches that are not NewSpring campuses.</p>
           <p class="mb-0"><a href="/about.html" data-scroll class="btn btn-primary">Learn More About Us</a></p>
         </div>
       </section>
