made hero full height of viewport at xl breakpoint

--- a/jobs.html
+++ b/jobs.html
@@ -67,7 +67,7 @@
 
     <div id="content">
 
-      <section class="position-relative bg-tertiary text-white d-flex justify-content-center align-content-end text-center pt-12 pb-8 flex-wrap" style="background-color: rgb(42,73,48);">
+      <section class="position-relative bg-tertiary text-white d-flex justify-content-center align-content-end text-center pt-12 pb-8 flex-wrap vh-xl-100" style="background-color: rgb(42,73,48);">
         <div class="fullscreen background-cover background-center o-100" style="background-image: url('/Themes/new/Assets/Images/jobs_hero_2x1.jpg')"></div>
         <div class="fullscreen o-100" style="background: rgb(42,73,48);
   background: linear-gradient(180deg, rgba(42,73,48,0) 20%, rgba(42,73,48,1) 95%);"></div>
