--- a/index.html
+++ b/index.html
@@ -30,208 +30,66 @@
     <link rel="stylesheet" href="./Themes/new/Styles/theme.css" />
   </head>
   <body>
-    <section class="p-0 w-100 bg-white d-grid grid-cols-2 justify-content-between align-content-center drop-shadow">
-      <div class="d-grid align-content-center">
+    <section class="position-fixed bring-forward p-1 w-100 d-grid grid-cols-2 justify-content-between align-content-center">
+      <div class="fullscreen o-60" style="background: rgb(0,0,0);
+  background: linear-gradient(0deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 95%);"></div>
+
+      <div class="d-grid align-content-center bring-forward">
         <a href="/" class="px-3 mb-0">
-          <img src="./Themes/new/Assets/SVG/logo.svg" alt="NewSpring Church Logo" style="width: 160px; max-width: 160px" />
+          <img src="./Themes/new/Assets/SVG/logo-light.svg" alt="NewSpring Church Logo" style="width: 160px; max-width: 160px" />
         </a>
       </div>
-      <div class="overflow-hidden text-right">
-        <a href="#" class="d-inline-block no-underline p-3 p-md-3 text-gray-darker border-solid border-l border-gray-lighter">
+      <div class="overflow-hidden text-right bring-forward">
+        <a href="#" class="d-inline-block no-underline p-3 p-md-3 text-white">
           <i class="fa-light fa-lg fa-bars"></i>
         </a>
 
         <span class="hidden-xs hidden-sm">
-          <a href="#" class="d-inline-block no-underline p-3 p-md-3 text-gray-darker border-solid border-l border-gray-lighter">
+          <a href="#" class="d-inline-block no-underline p-3 p-md-3 text-white">
             <i class="fa-light fa-lg fa-location-dot"></i>
           </a>
 
-          <a href="#" class="d-inline-block no-underline p-3 p-md-3 text-gray-darker border-solid border-l border-gray-lighter">
+          <a href="#" class="d-inline-block no-underline p-3 p-md-3 text-white">
             <i class="fa-light fa-lg fa-magnifying-glass"></i>
           </a>
         </span>
 
-        <a href="#" class="d-inline-block no-underline p-3 p-md-3 text-gray-darker border-solid border-l border-gray-lighter">
+        <a href="#" class="d-inline-block no-underline p-3 p-md-3 text-white">
           <i class="fa-light fa-lg fa-circle-user"></i>
         </a>
       </div>
     </section>
 
-    <div class="bg-white px-5 py-7 px-md-7 py-md-8">
-      <div class="text-constrained mx-auto">
-        <p><a href="/easter.html">Easter</a></p>
-        <p class="pretitle">Display 1</p>
-        <h1 class="display-1">Through creation, the Spirit of God brought life and order into the darkness and chaos.</h1>
+    <div id="content">
 
-        <p class="pretitle">Display 2</p>
-        <h1 class="display-2">Through creation, the Spirit of God brought life and order into the darkness and chaos.</h1>
+      <section class="position-relative bg-black text-white d-flex justify-content-center align-content-end text-center pt-12 pb-8 flex-wrap vh-100 overflow-hidden" style="background-color: rgb(42,73,48);">
 
-        <p class="pretitle">Display 3</p>
-        <h1 class="display-3">Through creation, the Spirit of God brought life and order into the darkness and chaos.</h1>
+        <video class="video d-block fullscreen w-100" style="object-fit: cover; min-width: 100%; min-height: 100%; height: 120%; opacity: 1;" width="1280" height="720" playsinline="" loop="" autoplay="" muted="">
+          <source src="https://s3.amazonaws.com/ns.video/newspring/promotions/homepage/2022/Homepage%20Spring%20Summer_2022_v6_forweb.mp4" type="video/mp4">
+        </video>
 
-        <p class="pretitle">Heading 1</p>
-        <h1>It’s not about the bread and wine; it’s about the body and blood of Jesus.</h1>
+        <div class="fullscreen o-70" style="background: rgb(0,0,0);
+  background: linear-gradient(180deg, rgba(0,0,0,0) 20%, rgba(0,0,0,1) 95%);"></div>
 
-        <p class="pretitle">Heading 2</p>
-        <h2>If you can’t convince yourself to turn off your smartphone, at least disable the notifications for a day.</h2>
+        <div class="bring-forward page-constrained px-md-7 height-max-content">
+          <h1 class="font-black">We want everyone everywhere to have an everyday relationship with Jesus.</h1>
+          <p class="mb-0"><a href="#openings" data-scroll class="btn btn-primary drop-shadow">Get Involved</a></p>
+        </div>
+      </section>
 
-        <p class="pretitle">Heading 3</p>
-        <h3>Once more you find yourself trying to muster up the courage to get up, get ready, and face the week.</h3>
-
-        <p class="pretitle">Heading 4</p>
-        <h4>When a friend’s life has been turned upside down, the last thing they need is our prescription for a quick fix.</h4>
-
-        <p class="pretitle">Heading 5</p>
-        <h5>Often, pointing someone to the truth is the easy part. What’s harder is showing up.</h5>
-
-        <p class="pretitle">Heading 6</p>
-        <h6>Before the world was created, the Holy Spirit was hovering over the darkness of the earth.</h6>
-
-        <p class="pretitle">Pretitle</p>
-        <p class="pretitle text-primary">Why we do communion</p>
-
-        <p class="pretitle">Blockquote</p>
-        <blockquote class="text-tertiary">
-          <p>Every time we gather around bread and wine, in church or in our homes, we remember Jesus is the one who provides all we need.</p>
-          <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
-        </blockquote>
-
-        <p class="pretitle">Subtitle</p>
-        <p class="lead">Every time we gather around bread and wine, in church or in our homes, we remember Jesus is the one who provides all we need.</p>
-
-        <p class="pretitle">Body Copy</p>
-        <p>
-          Before the world was created, the Holy Spirit was hovering over the darkness of the earth (Genesis 1:2). He existed before the world began, long
-          before anyone had ever prophesied or spoken in tongues.
-        </p>
-        <p>
-          Through creation, the Spirit of God brought life and order into the darkness and chaos. Then, through our sin, we brought that darkness and chaos back
-          into the perfect world which God created (Genesis 3).
-        </p>
-        <p>
-          To rescue us from our sin, Jesus came to earth and paid the price for our sin. The Spirit of God came back into the sinful and chaotic world we
-          created, once again creating life and order by overcoming death (Romans 8:11, John 14:16-17). Before Jesus returned to heaven, He then gave this
-          Spirit to His followers (John 20:22).
-        </p>
-      </div>
-
-      <div class="hidden">
-        <ol>
-          <li>Minim excepteur officia non minim laboris pariatur</li>
-          <li>Ex est sit duis eiusmod voluptate consequat ea do enim culpa</li>
-          <li>Consequat dolor ullamco qui laboris consequat id aliqua</li>
-          <li>Eu proident aute incididunt deserunt deserunt</li>
-          <li>Enim ex excepteur eiusmod elit. Nulla nisi ad culpa</li>
-        </ol>
-        <p>
-          Aute ea eu et Lorem eu consectetur aliquip voluptate. Consectetur consectetur pariatur ad sint velit duis reprehenderit enim duis. Sunt consequat
-          ipsum ipsum laboris nulla eiusmod magna non proident nulla. Ex est tempor aute mollit qui. Aliquip enim occaecat amet excepteur elit officia. Eu amet
-          deserunt veniam aliqua elit sint ad est occaecat quis voluptate adipisicing labore in. Magna duis voluptate culpa irure.
-        </p>
-        <p>
-          Sunt qui nostrud ullamco aliquip sunt adipisicing ad ex dolore ipsum commodo. Laborum consectetur minim amet et tempor occaecat consequat exercitation
-          duis cillum exercitation. Magna velit elit ea esse nisi fugiat laborum Lorem id.
-        </p>
-        <ul>
-          <li>Minim excepteur officia non minim laboris pariatur</li>
-          <li>Ex est sit duis eiusmod voluptate consequat ea do enim culpa</li>
-          <li>Consequat dolor ullamco qui laboris consequat id aliqua</li>
-          <li>Eu proident aute incididunt deserunt deserunt</li>
-          <li>Enim ex excepteur eiusmod elit. Nulla nisi ad culpa</li>
-        </ul>
-        <address>
-          <strong>Twitter, Inc.</strong><br />
-          1355 Market Street, Suite 900<br />
-          San Francisco, CA 94103<br />
-          <abbr title="Phone">P:</abbr> (123) 456-7890
-        </address>
-
-        <address>
-          <strong>Full Name</strong><br />
-          <a href="mailto:#">first.last@example.com</a>
-        </address>
-
-        <div class="table-responsive">
-          <table class="table table-striped table-bordered">
-            <caption>
-              Optional table caption.
-            </caption>
-            <thead>
-              <tr>
-                <th>#</th>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Username</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
-              </tr>
-              <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
-              </tr>
-              <tr>
-                <th scope="row">3</th>
-                <td>Larry</td>
-                <td>the Bird</td>
-                <td>@twitter</td>
-              </tr>
-            </tbody>
-          </table>
+      <section class="d-grid grid-cols-1 grid-cols-md-2 p-2 p-md-4 bg-white gap-y-2 gap-y-md-4 gap-x-md-4">
+        <div class="col-span-md-2 ratio-square ratio-md-landscape bg-gray-lighter rounded-lg">
+          <h2>Join us this Sunday</h2>
+          <p>Every week, we gather in 14 cities across the state of South Carolina.</p>
+          <p><a href="#" class="btn btn-sm btn-primary">Times and Locations</a></p>
         </div>
 
-        <!-- Standard button -->
-        <button type="button" class="btn btn-default">Default</button>
+        <div class="ratio-square bg-gray-lighter rounded-lg"></div>
 
-        <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-        <button type="button" class="btn btn-primary">Primary</button>
+        <div class="ratio-square bg-gray-lighter rounded-lg"></div>
+      </section>
 
-        <!-- Indicates a successful or positive action -->
-        <button type="button" class="btn btn-success">Success</button>
-
-        <!-- Contextual button for informational alert messages -->
-        <button type="button" class="btn btn-info">Info</button>
-
-        <!-- Indicates caution should be taken with this action -->
-        <button type="button" class="btn btn-warning">Warning</button>
-
-        <!-- Indicates a dangerous or potentially negative action -->
-        <button type="button" class="btn btn-danger">Danger</button>
-
-        <!-- Deemphasize a button by making it look like a link while maintaining button behavior -->
-        <button type="button" class="btn btn-link">Link</button>
-      </div>
     </div>
 
-    <script>
-      document.addEventListener(
-        "DOMContentLoaded",
-        function () {
-          let pretitleElements = document.querySelectorAll(".pretitle");
-          for (let i = 0; i < pretitleElements.length; i++) {
-            let pretitle = pretitleElements[i],
-              nextSibling = pretitle.nextElementSibling,
-              computedStyle = getComputedStyle(nextSibling),
-              fontSize = computedStyle.fontSize,
-              lineHeight = computedStyle.lineHeight,
-              letterSpacing = computedStyle.letterSpacing,
-              calculatedLineHeight = Math.round((lineHeight.replace("px", "") / fontSize.replace("px", "")) * 100) / 100,
-              seperator = " &nbsp; ";
-
-            // Do stuff
-            console.log();
-            pretitle.innerHTML = pretitle.innerHTML + seperator + fontSize + seperator + calculatedLineHeight + seperator + letterSpacing;
-          }
-        },
-        false
-      );
-    </script>
   </body>
 </html>
