--- a/jobs.html
+++ b/jobs.html
@@ -95,20 +95,6 @@
           <h2 class="display-3">Hear From Our Team</h2>
         </div>
 
-        <div class="hidden page-constrained mx-auto d-grid grid-cols-1 grid-cols-sm-2 px-2">
-
-          <div class="rounded-xl shadow-lg overflow-hidden text-white" style="background-color: rgb(20,100,100);" data-aos="fade-up">
-            <div class="position-relative ratio-square background-cover background-center" style="background-image: url('./Themes/new/Assets/Images/jobs_testimonials_jacob_1x1.jpg');">
-              <div class="position-absolute fullscreen" style="background: rgb(20,100,100);
-              background: linear-gradient(0deg, rgba(20,100,100,1) 0%, rgba(20,100,100,0) 50%);"></div>
-            </div>
-            <div class="p-4 p-md-6 bring-forward" style="margin-top: -100px; backdrop-filter: blur(20px);">
-              <h3 class="h3 tracking-tighter">"My wife and baby girls are just as loved and seen by NewSpring as I am as an employee.</h3>
-              <p>NewSpring believes that the health and well-being of my family is a huge part of me being successful in ministry and makes every accommodation necessary to keep my home Christ-centered and joyful. You're not going to find a more family-oriented and healthy work environment!"</p>
-              <p class="italic text-white mb-0"><b>Jacob Brown</b><br>Safety Director</p>
-            </div>
-          </div>
-        </div>
         
         <div class="d-grid grid-cols-1 gap-y-6 gap-y-md-8">
 
@@ -121,7 +107,7 @@
               <div class="p-4 p-md-6 py-md-0">
                   <h3 class="h3">"I truly love the culture of understanding.</h3>
                   <p>Our job is pretty flexible, and I cannot possibly think of another place where my family truly comes first. Also, I love that I am not allowed to take myself too seriously, which makes for a fun working environment."</p>
-                  <p class="mb-0 text-gray-light"><span class="lead font-bold text-gray-darker" style="color: #59747D;">Maliek Burrell</span><br>Worship Leader</p>
+                  <p class="mb-0 text-gray"><span class="lead font-bold text-gray-darker" style="color: #59747D;">Maliek Burrell</span><br>Worship Leader</p>
               </div>
             </div>
           </div>
@@ -135,7 +121,7 @@
               <div class="p-4 p-md-6 py-md-0">
                   <h3 class="h3">"I have loved working at NewSpring because it feels like a genuine family and team.</h3>
                   <p>Everyone is friendly, generous, and wants to see each other win. Because leaders have always cared about and invested in my growth both at work and at home, I am so much wiser and all-around healthier than I was before working here."</p>
-                  <p class="mb-0 text-gray-light"><span class="lead font-bold text-gray-darker" style="color: #67B3CD;">Kelsey Estrada</span><br>KidSpring Art Director</p>
+                  <p class="mb-0 text-gray"><span class="lead font-bold text-gray-darker" style="color: #67B3CD;">Kelsey Estrada</span><br>KidSpring Art Director</p>
               </div>
             </div>
           </div>
@@ -149,7 +135,7 @@
               <div class="p-4 p-md-6 py-md-0">
                   <h3 class="h3">"I've spent many years of my life working at NewSpring. They've been—without a doubt—the best years of my life!</h3>
                   <p>It's an incredible environment where the people you work for and serve alongside care about you, your family, and your walk with God. Each day my tires hit the parking lot, I'm excited to be here! I can't imagine a better place to invest my life building the kingdom of God!"</p>
-                  <p class="mb-0 text-gray-light"><span class="lead font-bold text-gray-darker" style="color: #263240;">Tom Haren</span><br>Outreach Coordinator</p>
+                  <p class="mb-0 text-gray"><span class="lead font-bold text-gray-darker" style="color: #263240;">Tom Haren</span><br>Outreach Coordinator</p>
               </div>
             </div>
           </div>
@@ -163,7 +149,7 @@
               <div class="p-4 p-md-6 py-md-0">
                   <h3 class="h3">"My wife and baby girls are just as loved and seen by NewSpring as I am as an employee.</h3>
                   <p>NewSpring believes that the health and well-being of my family is a huge part of me being successful in ministry and makes every accommodation necessary to keep my home Christ-centered and joyful. You're not going to find a more family-oriented and healthy work environment!"</p>
-                  <p class="mb-0 text-gray-light"><span class="lead font-bold text-gray-darker" style="color: #297F92;">Jacob Brown</span><br>Safety Director</p>
+                  <p class="mb-0 text-gray"><span class="lead font-bold text-gray-darker" style="color: #297F92;">Jacob Brown</span><br>Safety Director</p>
               </div>
             </div>
           </div>
