--- a/jobs.html
+++ b/jobs.html
@@ -171,63 +171,63 @@
             <div class="bg-white text-gray-darker p-3 pb-2 rounded-lg" data-aos="fade-up">
               <h3 class="h6 tracking-tighter mb-0">KidSpring Director</h3>
               <p class="mb-1 font-sans font-bold text-uppercase text-gray"><small>Myrtle Beach, SC</small></p>
-              <p class="mb-0"><a href="#" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
+              <p class="mb-0"><a href="/jobs-item.html" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
             </div>
           </div>
           <div>
             <div class="bg-white text-gray-darker p-3 pb-2 rounded-lg" data-aos="fade-up">
               <h3 class="h6 tracking-tighter mb-0">Discipleship Coordinator</h3>
               <p class="mb-1 font-sans font-bold text-uppercase text-gray"><small>Anderson, SC</small></p>
-              <p class="mb-0"><a href="#" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
+              <p class="mb-0"><a href="/jobs-item.html" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
             </div>
           </div>
           <div>
             <div class="bg-white text-gray-darker p-3 pb-2 rounded-lg" data-aos="fade-up">
               <h3 class="h6 tracking-tighter mb-0">Guest Services Coordinator</h3>
               <p class="mb-1 font-sans font-bold text-uppercase text-gray"><small>Anderson, SC</small></p>
-              <p class="mb-0"><a href="#" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
+              <p class="mb-0"><a href="/jobs-item.html" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
             </div>
           </div>
           <div>
             <div class="bg-white text-gray-darker p-3 pb-2 rounded-lg" data-aos="fade-up">
               <h3 class="h6 tracking-tighter mb-0">KidSpring Coordinator <span class="no-wrap">(Part-Time)</span></h3>
               <p class="mb-1 font-sans font-bold text-uppercase text-gray"><small>Hilton Head, SC</small></p>
-              <p class="mb-0"><a href="#" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
+              <p class="mb-0"><a href="/jobs-item.html" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
             </div>
           </div>
           <div>
             <div class="bg-white text-gray-darker p-3 pb-2 rounded-lg" data-aos="fade-up">
               <h3 class="h6 tracking-tighter mb-0">Worship Leader</h3>
               <p class="mb-1 font-sans font-bold text-uppercase text-gray"><small>Columbia, SC</small></p>
-              <p class="mb-0"><a href="#" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
+              <p class="mb-0"><a href="/jobs-item.html" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
             </div>
           </div>
           <div>
             <div class="bg-white text-gray-darker p-3 pb-2 rounded-lg" data-aos="fade-up">
               <h3 class="h6 tracking-tighter mb-0">Fuse Director</h3>
               <p class="mb-1 font-sans font-bold text-uppercase text-gray"><small>Columbia, SC</small></p>
-              <p class="mb-0"><a href="#" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
+              <p class="mb-0"><a href="/jobs-item.html" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
             </div>
           </div>
           <div>
             <div class="bg-white text-gray-darker p-3 pb-2 rounded-lg" data-aos="fade-up">
               <h3 class="h6 tracking-tighter mb-0">Worship Leader</h3>
               <p class="mb-1 font-sans font-bold text-uppercase text-gray"><small>Northeast Columbia, SC</small></p>
-              <p class="mb-0"><a href="#" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
+              <p class="mb-0"><a href="/jobs-item.html" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
             </div>
           </div>
           <div>
             <div class="bg-white text-gray-darker p-3 pb-2 rounded-lg" data-aos="fade-up">
               <h3 class="h6 tracking-tighter mb-0">Worship Leader</h3>
               <p class="mb-1 font-sans font-bold text-uppercase text-gray"><small>Myrtle Beach, SC</small></p>
-              <p class="mb-0"><a href="#" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
+              <p class="mb-0"><a href="/jobs-item.html" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
             </div>
           </div>
           <div>
             <div class="bg-white text-gray-darker p-3 pb-2 rounded-lg" data-aos="fade-up">
               <h3 class="h6 tracking-tighter mb-0">Production Coordinator</h3>
               <p class="mb-1 font-sans font-bold text-uppercase text-gray"><small>Spartanburg, SC</small></p>
-              <p class="mb-0"><a href="#" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
+              <p class="mb-0"><a href="/jobs-item.html" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
             </div>
           </div>
           
