updated page title for job item page

--- a/jobs-item.html
+++ b/jobs-item.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Giving | NewSpring.cc</title>
+    <title>Guest Services Coordinator | Jobs | NewSpring.cc</title>
 
     <!-- jQuery -->
     <script src="https://newspring.cc/Scripts/Bundles/RockJQueryLatest?v=04Na70l5xG-Ak3mWoqN6rMOm3L9-p3kgT_NPfUoJxck1"></script>
