updates to theme for /jobs, added parse lava for home

--- a/jobs.html
+++ b/jobs.html
@@ -235,7 +235,7 @@
 
         <div class="text-constrained mx-auto text-center">
           <p>Don't see what you were looking for?</p>
-          <p class="mb-0"><a href="#" data-scroll class="btn btn-primary">Subscribe to Job Alerts</a></p>
+          <p class="mb-0"><a href="https://newspring.cc/workflows/510?CommunicationList=394b38d3-da36-462c-94cc-764473c916cc" data-scroll class="btn btn-primary">Subscribe to Job Alerts</a></p>
         </div>
       </section>
 
