swapped section bg colors between process and benefits sections

--- a/jobs.html
+++ b/jobs.html
@@ -239,9 +239,9 @@
         </div>
       </section>
 
-      <section id="process" class="bg-white px-sm-4">
+      <section id="process" class="bg-gray-darker text-white px-sm-4">
         <div class="text-constrained mx-auto text-center mb-md-7">
-          <p class="pretitle text-primary">Our Hiring Process</p>
+          <p class="pretitle text-primary">Hiring Process</p>
           <h2 class="display-3">God made you and uniquely gifted you.</h2>
           <p class="lead">Our hiring process is designed to discern whether the role you’re applying for is the right fit right now.</p>
           <p>We know your life and your time is valuable. So, if at any point in the process, it’s clear that the job you’re applying for isn’t the best fit, we’ll be in touch. You should also feel the freedom to email us at <a href="mailto:hiring@newspring.cc">hiring@newspring.cc</a>.</p>
@@ -305,7 +305,7 @@
         </div>      
       </section>
 
-      <section id="benefits" class="bg-gray-darker text-white">
+      <section id="benefits" class="bg-white">
         <div class="text-constrained mx-auto text-center">
           <p class="pretitle text-primary">Benefits</p>
           <h2 class="display-3">We truly care about our staff and their families!</h2>
@@ -350,16 +350,16 @@
             <p>We follow the biblical rhythm of work and rest, offering a three-week sabbatical every seventh year of ministry.</p>
           </div>
           <div data-aos="fade-up">
-            <i class="fa-thin fa-3x fa-fw fa-heart text-warning mb-2"></i>
-            <h3 class="h5 mb-0">Counseling or Coaching</h3>
-            <p class="lead"><small>With Full Strength Network</small></p>
-            <p>We cover 12 sessions per year; whether you need healing from the past or equipping for the future.</p>
-          </div>
-          <div data-aos="fade-up">
-            <i class="fa-thin fa-3x fa-fw fa-graduation-cap text-danger mb-2"></i>
+            <i class="fa-thin fa-3x fa-fw fa-graduation-cap text-warning mb-2"></i>
             <h3 class="h5 mb-0">Opportunity to Attend Seminary</h3>
             <p class="lead"><small>At Southeastern Baptist Theological Seminary</small></p>
             <p>We’re happy to encourage your continued education.</p>
+          </div>
+          <div data-aos="fade-up">
+            <i class="fa-thin fa-3x fa-fw fa-heart text-danger mb-2"></i>
+            <h3 class="h5 mb-0">Counseling or Coaching</h3>
+            <p class="lead"><small>With Full Strength Network</small></p>
+            <p>We cover 12 sessions per year; whether you need healing from the past or equipping for the future.</p>
           </div>
           <div data-aos="fade-up">
             <i class="fa-thin fa-3x fa-fw fa-face-smile-hearts text-danger mb-2"></i>
