changed out kraft colored icons to brand secondary on jobs page

--- a/jobs.html
+++ b/jobs.html
@@ -324,12 +324,12 @@
             <p>We match up to 4% of your investment.</p>
           </div>
           <div data-aos="fade-up">
-            <i class="fa-thin fa-3x fa-fw fa-heart-pulse text-kraft mb-2"></i>
+            <i class="fa-thin fa-3x fa-fw fa-heart-pulse text-secondary mb-2"></i>
             <h3 class="h5">Long Term/Life Insurance</h3>
             <p>We cover 100%.</p>
           </div>
           <div data-aos="fade-up">
-            <i class="fa-thin fa-3x fa-fw fa-island-tropical text-kraft mb-2"></i>
+            <i class="fa-thin fa-3x fa-fw fa-island-tropical text-secondary mb-2"></i>
             <h3 class="h5">Paid Time Off</h3>
             <p>We want you to win at home, too!</p>
           </div>
