linked locations to corresponding campus pages on /jobs

--- a/jobs-item.html
+++ b/jobs-item.html
@@ -66,9 +66,9 @@
 
       <section class="position-relative bg-gray-darker text-white d-flex justify-content-center align-items-center py-7">
         <div class="bring-forward text-constrained text-center">
-          <p class="pretitle text-primary">Job Opening</p>
+          <p class="pretitle">Job Opening</p>
           <h1 class="display-3">Guest Services Coordinator</h1>
-          <p class="pretitle mb-0">Anderson, SC</p>
+          <p class="pretitle mb-0"><a href="https://newspring.cc/locations/anderson" class="text-decoration-none">Anderson, SC</a></p>
         </div>
       </section>
 
