--- a/jobs.html
+++ b/jobs.html
@@ -169,64 +169,64 @@
         <div class="page-constrained mx-auto d-grid grid-cols-1 grid-cols-md-2 grid-cols-xl-3 my-5 my-md-6 gap-y-2 gap-x-sm-3 gap-y-md-3">
           <div>
             <div class="bg-white text-gray-darker p-3 pb-2 rounded-lg" data-aos="fade-up">
-              <h3 class="h6 tracking-tighter mb-0">KidSpring Director</h3>
-              <p class="mb-1 font-sans font-bold text-uppercase text-gray"><small>Myrtle Beach, SC</small></p>
+              <h3 class="h6 tracking-tighter mb-0"><a href="/jobs-item.html" class="text-decoration-none text-gray-darker">KidSpring Director</a></h3>
+              <p class="mb-1 font-sans font-bold text-uppercase text-gray"><a href="https://newspring.cc/locations/myrtle-beach" class="text-decoration-none"><small>Myrtle Beach, SC</small></a></p>
               <p class="mb-0"><a href="/jobs-item.html" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
             </div>
           </div>
           <div>
             <div class="bg-white text-gray-darker p-3 pb-2 rounded-lg" data-aos="fade-up">
-              <h3 class="h6 tracking-tighter mb-0">Discipleship Coordinator</h3>
-              <p class="mb-1 font-sans font-bold text-uppercase text-gray"><small>Anderson, SC</small></p>
+              <h3 class="h6 tracking-tighter mb-0"><a href="/jobs-item.html" class="text-decoration-none text-gray-darker">Discipleship Coordinator</a></h3>
+              <p class="mb-1 font-sans font-bold text-uppercase text-gray"><a href="https://newspring.cc/locations/anderson" class="text-decoration-none"><small>Anderson, SC</small></a></p>
               <p class="mb-0"><a href="/jobs-item.html" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
             </div>
           </div>
           <div>
             <div class="bg-white text-gray-darker p-3 pb-2 rounded-lg" data-aos="fade-up">
-              <h3 class="h6 tracking-tighter mb-0">Guest Services Coordinator</h3>
-              <p class="mb-1 font-sans font-bold text-uppercase text-gray"><small>Anderson, SC</small></p>
+              <h3 class="h6 tracking-tighter mb-0"><a href="/jobs-item.html" class="text-decoration-none text-gray-darker">Guest Services Coordinator</a></h3>
+              <p class="mb-1 font-sans font-bold text-uppercase text-gray"><a href="https://newspring.cc/locations/anderson" class="text-decoration-none"><small>Anderson, SC</small></a></p>
               <p class="mb-0"><a href="/jobs-item.html" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
             </div>
           </div>
           <div>
             <div class="bg-white text-gray-darker p-3 pb-2 rounded-lg" data-aos="fade-up">
-              <h3 class="h6 tracking-tighter mb-0">KidSpring Coordinator <span class="no-wrap">(Part-Time)</span></h3>
-              <p class="mb-1 font-sans font-bold text-uppercase text-gray"><small>Hilton Head, SC</small></p>
+              <h3 class="h6 tracking-tighter mb-0"><a href="/jobs-item.html" class="text-decoration-none text-gray-darker">KidSpring Coordinator</a> <span class="no-wrap">(Part-Time)</span></h3>
+              <p class="mb-1 font-sans font-bold text-uppercase text-gray"><a href="https://newspring.cc/locations/hilton-head" class="text-decoration-none"><small>Hilton Head, SC</small></a></p>
               <p class="mb-0"><a href="/jobs-item.html" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
             </div>
           </div>
           <div>
             <div class="bg-white text-gray-darker p-3 pb-2 rounded-lg" data-aos="fade-up">
-              <h3 class="h6 tracking-tighter mb-0">Worship Leader</h3>
-              <p class="mb-1 font-sans font-bold text-uppercase text-gray"><small>Columbia, SC</small></p>
+              <h3 class="h6 tracking-tighter mb-0"><a href="/jobs-item.html" class="text-decoration-none text-gray-darker">Worship Leader</a></h3>
+              <p class="mb-1 font-sans font-bold text-uppercase text-gray"><a href="https://newspring.cc/locations/columbia" class="text-decoration-none"><small>Columbia, SC</small></a></p>
               <p class="mb-0"><a href="/jobs-item.html" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
             </div>
           </div>
           <div>
             <div class="bg-white text-gray-darker p-3 pb-2 rounded-lg" data-aos="fade-up">
-              <h3 class="h6 tracking-tighter mb-0">Fuse Director</h3>
-              <p class="mb-1 font-sans font-bold text-uppercase text-gray"><small>Columbia, SC</small></p>
+              <h3 class="h6 tracking-tighter mb-0"><a href="/jobs-item.html" class="text-decoration-none text-gray-darker">Fuse Director</a></h3>
+              <p class="mb-1 font-sans font-bold text-uppercase text-gray"><a href="https://newspring.cc/locations/columbia" class="text-decoration-none"><small>Columbia, SC</small></a></p>
               <p class="mb-0"><a href="/jobs-item.html" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
             </div>
           </div>
           <div>
             <div class="bg-white text-gray-darker p-3 pb-2 rounded-lg" data-aos="fade-up">
-              <h3 class="h6 tracking-tighter mb-0">Worship Leader</h3>
-              <p class="mb-1 font-sans font-bold text-uppercase text-gray"><small>Northeast Columbia, SC</small></p>
+              <h3 class="h6 tracking-tighter mb-0"><a href="/jobs-item.html" class="text-decoration-none text-gray-darker">Worship Leader</a></h3>
+              <p class="mb-1 font-sans font-bold text-uppercase text-gray"><a href="https://newspring.cc/locations/northeast-columbia" class="text-decoration-none"><small>Northeast Columbia, SC</small></a></p>
               <p class="mb-0"><a href="/jobs-item.html" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
             </div>
           </div>
           <div>
             <div class="bg-white text-gray-darker p-3 pb-2 rounded-lg" data-aos="fade-up">
-              <h3 class="h6 tracking-tighter mb-0">Worship Leader</h3>
-              <p class="mb-1 font-sans font-bold text-uppercase text-gray"><small>Myrtle Beach, SC</small></p>
+              <h3 class="h6 tracking-tighter mb-0"><a href="/jobs-item.html" class="text-decoration-none text-gray-darker">Worship Leader</a></h3>
+              <p class="mb-1 font-sans font-bold text-uppercase text-gray"><a href="https://newspring.cc/locations/myrtle-beach" class="text-decoration-none"><small>Myrtle Beach, SC</small></a></p>
               <p class="mb-0"><a href="/jobs-item.html" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
             </div>
           </div>
           <div>
             <div class="bg-white text-gray-darker p-3 pb-2 rounded-lg" data-aos="fade-up">
-              <h3 class="h6 tracking-tighter mb-0">Production Coordinator</h3>
-              <p class="mb-1 font-sans font-bold text-uppercase text-gray"><small>Spartanburg, SC</small></p>
+              <h3 class="h6 tracking-tighter mb-0"><a href="/jobs-item.html" class="text-decoration-none text-gray-darker">Production Coordinator</a></h3>
+              <p class="mb-1 font-sans font-bold text-uppercase text-gray"><a href="https://newspring.cc/locations/spartanburg" class="text-decoration-none"><small>Spartanburg, SC</small></a></p>
               <p class="mb-0"><a href="/jobs-item.html" class="font-sans font-medium text-decoration-none tracking-tight">View Details <i class="fa-solid fa-xs fa-chevron-right"></i></a></p>
             </div>
           </div>
