updated copy on /jobs

--- a/jobs.html
+++ b/jobs.html
@@ -83,7 +83,7 @@
           <h2 class="display-3">We are a church that wants to see <span class="text-primary">everyone everywhere</span> in an <span class="text-primary">everyday relationship with Jesus.</span></h2>              
         </div>
         <div class="text-constrained mx-auto text-center">      
-          <p class="lead text-tertiary">If that’s something you desire, too, come join our team!</p>
+          <p class="lead text-tertiary">If that's also something you desire, come join our team!</p>
           <p>In 2020 we started down a 10-year path we call <a href="/2030">Vision 2030</a>. Until 2030, our vision is focused on three things: getting our current campuses in permanent homes, eliminating all of our debt (completed as of 2023), and planting ten churches that are not NewSpring campuses.</p>
           <p class="mb-0"><a href="/about.html" data-scroll class="btn btn-primary">Learn More About Us</a></p>
         </div>
