added vision 2030/type pages, updated jobs hero

--- a/jobs.html
+++ b/jobs.html
@@ -67,7 +67,17 @@
 
     <div id="content">
 
-      <section class="position-relative bg-tertiary text-white d-flex justify-content-center align-content-end text-center pt-12 pb-8 flex-wrap vh-xl-100" style="background-color: rgb(42,73,48);">
+      <section class="position-relative bg-tertiary text-white d-flex justify-content-center align-content-end text-center flex-wrap" style="background-color: rgb(42,73,48);">
+        <div class="hidden fullscreen background-cover background-center o-100" style="background-image: url('/Themes/new/Assets/Images/jobs_hero_2x1.jpg')"></div>
+        <div class="fullscreen o-100" style="background: rgb(42,73,48);
+  background: linear-gradient(180deg, rgba(42,73,48,0) 20%, rgba(42,73,48,1) 95%);"></div>
+        <div class="bring-forward text-constrained height-max-content">
+          <h1 class="display-3">Join Our Team</h1>
+          <p class="mb-0"><a href="#openings" data-scroll class="btn btn-primary">View Job Openings</a></p>
+        </div>
+      </section>
+
+      <section class="hidden position-relative bg-tertiary text-white d-flex justify-content-center align-content-end text-center pt-12 pb-8 flex-wrap vh-xl-100" style="background-color: rgb(42,73,48);">
         <div class="fullscreen background-cover background-center o-100" style="background-image: url('/Themes/new/Assets/Images/jobs_hero_2x1.jpg')"></div>
         <div class="fullscreen o-100" style="background: rgb(42,73,48);
   background: linear-gradient(180deg, rgba(42,73,48,0) 20%, rgba(42,73,48,1) 95%);"></div>
