--- a/2030.html
+++ b/2030.html
@@ -67,16 +67,16 @@
 
     <div id="content">
 
-      <section class="bg-black text-white position-relative d-flex justify-content-center align-content-center text-center pb-10 pb-md-12 px-lg-9">
+      <section class="text-white position-relative d-flex justify-content-center align-content-center text-center px-md-8" style="background-color: rgb(0,10,30);">
         <div
           class="fullscreen background-cover background-center o-100"
-          style="background-image: url('https://images.unsplash.com/photo-1451187580459-43490279c0fa?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2672&q=100')"></div>
-        <div class="fullscreen o-100" style="background: rgb(0,0,0);
-  background: linear-gradient(0deg, rgba(0,0,0,0) 30%, rgba(0,0,0,1) 90%);"></div>
-        <div class="bring-forward page-constrained" style="height: max-content !important">
+          style="background-image: url('https://cdn.pixabay.com/photo/2016/10/20/18/35/earth-1756274_1280.jpg')"></div>
+        <div class="fullscreen o-100" style="background: rgb(0,10,30);
+  background: linear-gradient(0deg, rgba(0,10,30,0) 10%, rgba(0,10,30,1) 90%);"></div>
+        <div class="bring-forward page-constrained height-max-content">
           <h1 class="display-3">We want to see everyone everywhere in an everyday relationship with Jesus &mdash; and yes, that means we’ve got some work to do.</h1>
           <p class="lead text-white">The first step? For us, it was to make a plan that we’re calling Vision 2030.</p>          </p>
-          <p class="mb-0"><a href="#debt" data-scroll class="btn btn-primary drop-shadow">See the Plan</a></p>
+          <p class="mb-0"><a href="#debt" data-scroll class="btn btn-primary drop-shadow">Learn More</a></p>
         </div>
       </section>
 
@@ -84,8 +84,8 @@
       <section id="debt" class="bg-white">
         <div class="text-constrained mx-auto text-center">
           <i class="hidden fa-solid fa-circle-check fa-3x mb-3 text-primary bg-white rounded-full"></i>
-          <p class="pretitle text-primary"><i class="fa-solid fa-circle-check"></i> Completed 2023</p>
-          <h2 class="display-3">Be Debt Free</h2>
+          <p class="pretitle text-primary" data-aos="fade-up"><i class="fa-solid fa-circle-check"></i> Completed 2023</p>
+          <h2 class="h1">Be Debt Free</h2>
 
           <p class="lead text-primary">We dreamed of being debt-free since January 2017 &mdash; when we started the year with a $45 million debt balance largely due to facility-building projects.</p>
 
@@ -100,7 +100,7 @@
       <section id="church-planting" class="bg-gray-darker text-white px-0">
         <div class="text-constrained mx-auto px-4 px-sm-7 px-md-0">
           <div class="text-center">
-            <h2 class="display-3">Plant Ten New Churches</h2>
+            <h2 class="h1">Plant Ten New Churches</h2>
             <p class="lead text-primary">We will identify, train, and send out people we believe have been called by God and are ready to start a new church — not a NewSpring campus.</p>
             <p>We believe these new churches will be planted outside the state of South Carolina. We also strongly believe God will raise up other people in our church who will feel called to go and be a part of these church plants!</p>
           </div>
@@ -181,7 +181,7 @@
   background: linear-gradient(0deg, rgba(35,93,95,0) 50%, rgba(35,93,95,1) 100%);"></div>
         <div class="text-constrained mx-auto px-4 px-sm-7 px-md-0">
           <div class="text-center">
-            <h2 class="display-3">All NewSpring campuses in their permanent homes</h2>
+            <h2 class="h1">All NewSpring Campuses in Permanent Homes</h2>
           
             <p class="lead text-primary">Out of our 14 locations across the state, our <a href="/locations/aiken">Aiken</a>, <a href="/locations/charleston">Charleston</a>, <a href="/locations/lake-wylie">Lake Wylie</a>, and <a href="/locations/myrtle-beach">Myrtle Beach</a> campuses are still leasing their facilities.</p>
             <p>We’d love to see each of these campuses established in their permanent facility by 2030!</p>
@@ -258,7 +258,7 @@
 
       <section id="questions" class="text-center">
         <div class="text-constrained mx-auto">
-          <h2>Have questions?</h2>
+          <h2>Have Questions?</h2>
           <p>We’d love to answer any questions you might have.</p>
           <p class="mb-0"><a href="/workflows/152" class="btn btn-primary">Contact Us</a></p>
         </div>
